import '../../../require.js';
import '../../../exports.js';
import './fastsearch_pb.js';
import '../../../external/bufbuild/protobuf.js';
define(de[1482], he([1, 0, 1109, 86]), function (ce, e, t, i) {
			"use strict";
			Object.defineProperty(e, "__esModule", { value: !0 }),
				(e.$b_ = void 0),
				(e.$b_ = {
					typeName: "aiserver.v1.FastSearchService",
					methods: {
						startFastSearch: {
							name: "StartFastSearch",
							I: t.$7$,
							O: t.$8$,
							kind: i.MethodKind.Unary,
						},
						fastSearch: {
							name: "FastSearch",
							I: t.$$$,
							O: t.$_$,
							kind: i.MethodKind.Unary,
						},
					},
				});
		}),
		